Updated validation test description an changed file read path to absolute path
Signed-off-by: Vanessa Fotso <vfotso@mitre.org>

--- a/lib/docs/validation_test_description.md.erb
+++ b/lib/docs/validation_test_description.md.erb
@@ -4,5 +4,5 @@ It verifies the presence of mandatory elements and that elements with required b
 CodeableConcept element bindings will fail if none of their codings have a code/system belonging to the bound ValueSet.
 Quantity, Coding, and code element bindings will fail if their code/system are not found in the valueset.
 
-This test will be skipped if no resource read or search requests were made in previous tests or if all requests were unsuccessful.
+This test will be skipped if no resource read requests were made in previous tests or if all requests were unsuccessful.
 
